NXP-32786 : Fix scrollbars on full screen

--- a/nuxeo-admin-console-web/angular-app/src/app/layouts/base-layout/components/base-layout.component.scss
+++ b/nuxeo-admin-console-web/angular-app/src/app/layouts/base-layout/components/base-layout.component.scss
@@ -1,7 +1,6 @@
 .base-container {
   display: flex;
   flex-direction: column;
-  width: 100vw;
   height: 100vh;
   &__bottom {
     display: flex;
